outliner.show_active shortcut (".") does not work anymore for bones only #48229

Closed
opened 2016-04-21 18:57:22 +02:00 by gregus · 10 comments

System Information
Operating system and graphics card
win 7 + GTX 670M

Blender Version
Broken: 2.77a
Worked: (optional)

Short description of error
outliner.show_active shortcut (".") does not work anymore for bones only both in edit and in pose mode when mouse is flying over the outliner

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
Create a bone with SHIT+A and extrude (E) severl times to have a few bones.
then select one of them.
Fly over the outliner and press "."
The hierarchy dos not developp to this bone.

**System Information** Operating system and graphics card win 7 + GTX 670M **Blender Version** Broken: 2.77a Worked: (optional) **Short description of error** outliner.show_active shortcut (".") does not work anymore for bones only both in edit and in pose mode when mouse is flying over the outliner **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Create a bone with SHIT+A and extrude (E) severl times to have a few bones. then select one of them. Fly over the outliner and press "." The hierarchy dos not developp to this bone.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @gregus

Added subscriber: @gregus
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2016-04-22 07:34:00 +02:00
Member

Its a bit misleading to say "does not work anymore" because it never has (its just not implemented)
Opening the outliner tree is based on the active object (and in case of an armature it wont dig deeper and consider the active (pose_)bone as well)
That being said it thinks its more of a request than an actual bug [but a reasonable request -- so I will have a look and see what I can do here]

Its a bit misleading to say "does not work `anymore`" because it never has (its just not implemented) Opening the outliner tree is based on the active **object** (and in case of an armature it wont dig deeper and consider the active **(pose_)bone** as well) That being said it thinks its more of a request than an actual bug [but a reasonable request -- so I will have a look and see what I can do here]
Author

Thank you Philipp for your answer.

I am digging in blender for a few months now, and right now in rigging.
I thought that this shortcut was obvious as it is in other softwares, because in an armature, you quickly end up with several levels of hierarchies and parenting and developping is often necessary to control the set up.

I first thought that I erased the shortcut but realised I was not able to set it back.
Indeed it would be a very good thing to have a shortcut for this action.

Thanks for your time.

Thank you Philipp for your answer. I am digging in blender for a few months now, and right now in rigging. I thought that this shortcut was obvious as it is in other softwares, because in an armature, you quickly end up with several levels of hierarchies and parenting and developping is often necessary to control the set up. I first thought that I erased the shortcut but realised I was not able to set it back. Indeed it would be a very good thing to have a shortcut for this action. Thanks for your time.

Added subscriber: @mont29

Added subscriber: @mont29

Indeed not a bug, switched to TODO task instead of closing since @lichtwerk is eager to implement it ;)

Indeed not a bug, switched to TODO task instead of closing since @lichtwerk is eager to implement it ;)
Member
[D1941: Outliner: "Show Active" will now also expand bone hierarchies to the active bone](https://archive.blender.org/developer/D1941) is my go at implementing this

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 27cc015581

This issue was referenced by 27cc015581c0ec269d9f0638b867a74630c50aca
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48229
No description provided.