Outliner: "Show Active" support for active bone

Resolves T48229